# RISET-Backend

./: README.md  pyproject.toml  run_api.py
examples/: ollama_example.py  test_nearest_restaurants.py
server/: server.py
src/abstract/: api_response.py
src/clients/: api.py  ollama_client.py
